src/app/game/game.component.scss
.connection-error {
  position: absolute;
  top: 10px;
  right: 10px;
  background-color: #e77070;
  padding: 5px 20px;
  border-radius: 5px;
  z-index: 10;
  box-shadow: 0 2px 4px -1px rgba(92, 0, 0, 0.25), 0 4px 5px 0 rgba(99, 14, 14, 0.14), 0 1px 10px 0 rgba(128, 33, 33, 0.12);

  & > * {
    vertical-align: middle
  }
}

.header {
  font-weight: bold;
  font-size: 1.4em;
  margin-bottom: 10px;

  mat-icon {
    margin-right: 10px;
    opacity: 0.4;
    vertical-align: middle;
  }

  span {
    margin-right: 10px;
    cursor: pointer;
    vertical-align: middle;
  }
}

.actions-top {
  margin: 10px 0;
}

.actions-bottom {
  margin: 10px 0;
}

.wrapper {
  margin: 20px 0;
  text-align: center;
}

.rank {
  width: 32px;
  height: 32px;
}

.player-column {
  margin: auto;
  padding-top: 10px;
}

.player-name {
  padding-bottom: 10px;
  font-weight: bold;
  cursor: pointer;
}

.total-cell {
  padding-bottom: 4px;

  .total {
    text-align: center;
    font-weight: bold;
  }
}

.cell {
  width: 100%;

  &.free {
    & .add-score {
      margin-top: 4px;
      text-align: center;
      cursor: pointer;
    }

    & .cum-score {
      font-size: 0.8em;
      margin: -3px 0 0 2px;
      opacity: 0.4;
    }
  }

  &.small-scores {
    padding-bottom: 2px;

    & .buttons {
      & mat-icon {
        margin-top: 4px;
        margin-bottom: 4px;
        cursor: pointer;
        user-select: none;
      }
    }

    & .overlay-score {
      pointer-events: none;
      user-select: none;
      top: 0;
      bottom: 0;
      right: 0;
      left: 0;
      text-align: center;
      margin-top: 7px;
    }
  }

  &.win-or-lose {
    height: 40px;
  }
}

.score-box {
  display: flex;
  width: 100%;
  overflow-x: scroll;
}

@media (screen and min-width: 600px) {
  .score-box {
    width: fit-content;
    min-width: 600px;
    max-width: 100%;
    margin: auto;
  }
}

